# hafb-cpp-fundamentals

./: My_Notes  PowershellCommands.md  README.md
Module0/CA0.1/: CMakeLists.txt
Module0/Getting Started/: README.md  hello.cpp
Module1/: .gitignore  .travis.yml  LICENSE  README.md
Module1/CA1-1/: README.md
Module1/CA1-1/src/: CMakeLists.txt  factor.cpp  factor.h  main.cpp
Module1/CA1-1/tests/: CMakeLists.txt  factor_test.cpp
Module1/CA1-2/: CMakeLists.txt  README.md
Module1/CA1-2/src/: CMakeLists.txt  main.cpp  math3dlib.cpp  math3dlib.h
Module1/CA1-2/tests/: CMakeLists.txt  math3dlib_test.cpp
Module1/LA1-1/: age.cpp  bmi.cpp  main.cpp  variables.cpp
Module1/LA1-2/: case.cpp  functions.cpp  functions.h  main.cpp  multitables.cpp  my_array.cpp  my_array_container.cpp  mysquares.cpp  run_func.cpp
Module1/LA1-3/: CMakeLists.txt  main.cpp  my_functions.cpp  my_functions.h
Module1/LA1-work/: README.md
Module1/TO1-1/: CMakeLists.txt  README.md  main.cpp  main_function.cpp
Module1/TO1-2/: CMakeLists.txt  README.md  factor.cpp  factor.h  main.cpp
Module1/TO1-3/: README.md
Module1/TO1-3/src/: CMakeLists.txt  fibo.cpp  fibo.h  main.cpp
Module1/TO1-3/tests/: CMakeLists.txt  fibo_test.cpp
Module1/TO1-4/: CMakeLists.txt  README.md  README.md.bk
Module1/TO1-4/src/: CMakeLists.txt  age.cpp  age.h  main.cpp
Module1/TO1-4/tests/: CMakeLists.txt  age_test.cpp
Module1/TO1-5/: README.md
Module1/TO1-5/src/: CMakeLists.txt  cars.cpp  cars.h  main.cpp
Module1/TO1-5/tests/: CMakeLists.txt  cars_test.cpp
Module2/: .travis.yml  README.md
Module2/CA2-1/: CMakeLists.txt  README.md  out2_data.txt  out_data.txt  project2_data.txt  project_data.txt  project_data_too_many.txt
Module2/CA2-1/src/: CMakeLists.txt  fileio.cpp  fileio.h  main.cpp  project.cpp  project.h
Module2/CA2-1/tests/: CMakeLists.txt  fileio_test.cpp  project_test.cpp
Module2/LA2-1/: CMakeLists.txt  README.md  extraction_vs_getline  terminology.txt
Module2/LA2-1/src/: main.cpp
Module2/LA2-2/: CMakeLists.txt  README.md  age.txt  name_age.txt
Module2/LA2-2/src/: main.cpp
Module2/LA2-3/: CMakeLists.txt  README.md  commute.csv  commute.txt  commute_data.txt  commute_report.txt  town.csv  town.txt  utah_info.csv
Module2/LA2-3/src/: CMakeLists.txt  main.cpp
Module2/LA2-4/: CMakeLists.txt  README.md  carton_data.csv  carton_data.txt  carton_data_error.txt  carton_out.txt
Module2/LA2-4/src/: CMakeLists.txt  carton.cpp  carton.h  carton_fileio.cpp  carton_fileio.h  main.cpp
Module2/TO2-1/: CMakeLists.txt  README.md  data_out.txt  payroll_data.txt  payroll_error1.txt  payroll_error2.txt  payroll_error4.txt  payroll_error5.txt  reports.txt
Module2/TO2-1/src/: CMakeLists.txt  functions.cpp  (+2 more)
Module2/TO2-2/: CMakeLists.txt  README.md  output.txt  payroll_error3.txt  payroll_error5.txt  reports.txt  too_much_data.txt
Module3/: README.md
Module3/CA3-1/: .gitignore  CMakeLists.txt  README.md
Module3/LA3-1/: .gitignore  CMakeLists.txt  README.md  friend_class.cpp  friend_method.cpp  main.cpp  nested_classes.cpp
Module3/LA3-1/src/: CMakeLists.txt  height.cpp  height.h  main.cpp
Module3/LA3-4/: CMakeLists.txt  README.md
Module3/TO3-1/: CMakeLists.txt  README.md
Module3/TO3-2/: .gitignore  README.md
Module3/TO3-2/src/: CMakeLists.txt  coordinates.cpp  coordinates.h  main.cpp
Module4/: .travis.yml  README.md
Module4/CA4-1/: CMakeLists.txt  README.md
Module4/CA4-2/: CMakeLists.txt  README.md
Module4/LA4-1/: CMakeLists.txt  README.md
Module4/LA4-2/: CMakeLists.txt  README.md
Module4/LA4-3/: CMakeLists.txt  README.md
Module4/LA4-4/: CMakeLists.txt  README.md
Module4/TO4-1/: CMakeLists.txt  README.md
Module4/TO4-2/: CMakeLists.txt  README.md
Module4/TO4-3/: CMakeLists.txt  README.md
Module5/: .gitignore  .travis.yml  README.md
Module5/CA5-1/: CMakeLists.txt  README.md
Module5/LA5-1/: README.md  homes.cpp  my_array.cpp  my_structures.cpp  my_vectors.cpp  structures.cpp
Module5/LA5-2/: CMakeLists.txt  README.md
Module5/LA5-3/: README.md  airport_system.cpp  c_strings.cpp  iterators.cpp
Module5/LA5-4/: README.md  binary_search_algorithm.cpp  lambdas.cpp  modifying_algorithms.cpp  mutating_algorithms.cpp  read_only_algorithms.cpp  sorting_algorithm.cpp
Module5/TO5-1/: .gitignore  CMakeLists.txt  README.md
Module5/TO5-1/data/: MOCK_DATA.csv  sample_data.csv
Module5/TO5-1/src/: CMakeLists.txt  containers.cpp  containers.h  main.cpp
Module5/TO5-1/tests/: CMakeLists.txt  containers_test.cpp
Module5/TO5-2/: README.md
Module6/: .travis.yml  README.md
Module6/CA6-1/: README.md  load_1.txt  load_small.txt
Module6/LA6-1/: CMakeLists.txt  README.md
Module6/LA6-2/: CMakeLists.txt  README.md
Module6/LA6-3/: CMakeLists.txt  README.md  first_names.txt
Module6/LA6-4/: CMakeLists.txt  README.md
Module6/LA6-5/: CMakeLists.txt  README.md
Module6/LA6-6/: CMakeLists.txt  README.md
Module6/LA6-7/: CMakeLists.txt  README.md
Module6/TO6-1/: CMakeLists.txt  README.md  cartons.txt  cartons_out.txt  integers.txt  stats.txt  stats_test.txt
Module6/TO6-2/: README.md  payroll_error1.txt  payroll_error2.txt  payroll_error3.txt  payroll_week23.txt  report_week23.txt
(+180 files in other folders)
